# applymonitor

./: .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  README.md  Taskfile.yml  worker-web.js  wrangler-api.toml  wrangler-web.toml  wrangler.toml
.github/workflows/: deploy-cloudflare.yml
tasks/: build.yml  deploy.yml  drop_all_tables.sh  drop_all_tables.sql  quality.yml  run.yml  setup.yml  test.yml
