[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
ui = { path = "packages/ui" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
